toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_loop_with_let_declaration-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0; i < 5; i++) {\n    let x = i * 2;\n    console.log(x);\n}\n"
---
internal_call_graph: {}
cell_exposed_values: {}
cell_depended_values: {}
triggerable_functions: {}
