toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_of_loop_with_array-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const array = [1, 2, 3, 4, 5];\nfor (const item of array) {\n    console.log(item);\n}\n"
---
internal_call_graph: {}
cell_exposed_values:
  array: {}
cell_depended_values: {}
triggerable_functions: {}
