toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_of_loop_with_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const pairs = [[1, 'one'], [2, 'two'], [3, 'three']];\nfor (const [num, word] of pairs) {\n    console.log(num, word);\n}\n"
---
internal_call_graph: {}
cell_exposed_values:
  pairs: {}
cell_depended_values: {}
triggerable_functions: {}
