toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_of_loop_with_object_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const pairs = [{a: 1, b:2}];\nfor (const {a, b} of pairs) {\n    console.log(a, b);\n}\n"
---
internal_call_graph: {}
cell_exposed_values:
  pairs: {}
cell_depended_values: {}
triggerable_functions: {}
