toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__nested_for_loops-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0; i < 3; i++) {\n    for (let j = 0; j < 3; j++) {\n        console.log(i, j);\n    }\n}\n"
---
internal_call_graph: {}
cell_exposed_values: {}
cell_depended_values: {}
triggerable_functions: {}
